Fase 3 - Conexão com o Banco de Dados - Update class cliente - Update class ClienteController - Update properties application    - Add conexão ao DB    - Debug de Queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=OSApiApplication
+
+spring.datasource.url=jdbc:mysql://172.16.0.30/sreds_osapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+
+spring.datasource.username=sasouza
+spring.datasource.password=1diSenai
+
+! Debug de Queries toda vez que houver uma requisição
+! no output vai retornar um 'Hibernate: query'
+spring.jpa.show-sql=True
