Fase 5 - Metodos PUT, DELETE - Update ClienteController    - Endpoint PUT /clientes/{clienteID}    - Endpoint DELETE /clientes/{clienteID}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=OSApiApplication
 
-spring.datasource.url=jdbc:mysql://172.16.0.30/sreds_osapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+!spring.datasource.url=jdbc:mysql://172.16.0.30/sreds_osapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+!spring.datasource.username=sasouza
+!spring.datasource.password=1diSenai
 
-spring.datasource.username=sasouza
-spring.datasource.password=1diSenai
+spring.datasource.url=jdbc:mysql://localhost:3307/umbra_osapi?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=dev_umbra
+spring.datasource.password=1234
 
 ! Debug de Queries toda vez que houver uma requisição
 ! no output vai retornar um 'Hibernate: query'
